Edit file naems

--- a/modeling.rmd
+++ b/modeling.rmd
@@ -108,11 +108,9 @@ predY <- realTest %>%
 ### Output submission
 
 ```{r Output_submission}
-submissionSet <- paste0(data_path, "sampleSubmission.csv") %>% 
+submissionSet <- paste0(data_path, "submission.csv") %>% 
   read_csv %>% 
   mutate(count = predY)
 
-write_csv(submissionSet, "output/submissionSet.csv")
+write_csv(submissionSet, "output/submission.csv")
 ```
-
-
